fix scrollbars

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -266,6 +266,8 @@ ul
     line-height: 1.6
     margin: 0
     color: white
+    // Flexbox likes to cause scrollbars when we don't need them
+    overflow: hidden
     .keyword, .function
       font-weight: 400
     .keyword
